2014-12-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* process.c: Whitespace and line-break nitpicks.

2014-12-08  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnutls.c (gnutls_certificate_details): The :signature isn't
	that useful, so remove it.
	(gnutls_certificate_details): Clean up whitespace slightly.
	(Fgnutls_peer_status): Return the Diffie-Hellman prime bits for
	the connection.
	(gnutls_certificate_details): Put :signature-algorithm back again,
	which was removed by mistake.
	(emacs_gnutls_handle_error): Fatal errors should be on level 1, so
	that they are not messaged by default (bug#16253).
	(Fgnutls_error_fatalp): Doc fix (bug#18210).

	* gnutls.c: Add Windows specs for gnutls_dh_get_prime_bits.

2014-12-07  Jan Djärv  <jan.h.d@swipnet.se>

	* nsimage.m (setPixmapData): Make bmRep local so class member is not
	set (Bug#19133).

2014-12-05  Lee Duhem  <lee.duhem@gmail.com>  (tiny change)

	* eval.c (Fsignal): Remove duplicate test.
	(Fautoload_do_load): Fix up docstring.

2014-12-05  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (represented_filename, represented_frame): New variables.
	(ns_set_represented_filename): New function.
	(sendEvent:): Set represented filename here to avoid flicker,
	related to Bug#18757.

	* nsterm.h: Declare ns_set_represented_filename.

	* nsfns.m (ns_set_name_as_filename): Don't set represented filename
	at once, call ns_set_represented_filename instead.

2014-12-05  Eli Zaretskii  <eliz@gnu.org>

	* dispextern.h (enum bidi_dir_t): Force NEUTRAL_DIR to be zero.
	(struct bidi_stack): Reduce size by using bit fields and by
	packing sos, override, and isolate_status into a single 8-bit
	byte called 'flags'.

	* bidi.c (ISOLATE_STATUS, OVERRIDE): New macros.
	(bidi_push_embedding_level): Construct flags from individual
	bits.  Adapt to changes in prev_for_neutral and next_for_neutral
	members.
	(bidi_pop_embedding_level): Use ISOLATE_STATUS.  Extract 'sos'
	from flags.  Adapt to changes in prev_for_neutral,